# Drast

./: .clang-format  .gitattributes  .gitignore  Arduino.h  BUILD_NOTES.md  BUILD_SYSTEM.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changes.md  HANDOFF.md  IMPROVEMENTS.md  INTEROP_NOTES.md  LICENCE  LICENSE  Makefile  PROGRESS.md  README.md  REFACTOR_NOTES.md  SEMANTICS.md  SYNTAX.md  TODO.md  bootstrap.sh  drast_flavour.drast  example.drast  fileArduinoAccelerometerSensor.h  package.txt  questions.md  xmake.lua
.github/workflows/: ci.yml  cmake.yml
Drast-Swift/Swift/: README.md
Examples/: enum_data.drast  file_io.drast  heap_syntax.drast  hello.drast  string_map.drast  structured_errors.drast
Examples/ArduinoR4/: package.txt
Examples/C++ Interop/: arduino.drast
Examples/Data Structures/: arraysLists.drast  nested.drast  structsEnums.drast
Examples/Fundamentals/: arithmeticStringOperations.drast  conditionals.drast  functions.drast  helloWorld.drast  loops.drast  variablesTypesTypeInference
bootstrap/: CHAIN.md
docs/: alias.md  asm.md  basics.md  cast.md  casting.md  do_try_catch.md  do_while_for.md  docs.md  enum.md  enums.md  functions.md  import.md  inline_assembly.md  keywords.md  structs.md  switch.md  try.md  typealias.md  variables.md  volatile.md
examples/: Lexer.drast  calculator.drast  functions.drast  guess_number.drast  hello.drast  structs.drast
lib/std/: run.py  (+2 more)
resources/: Logo.sketch
runtime/: drast_runtime.hpp
scripts/: run_examples.sh  run_tests.sh
src/: Codegen.cpp  Codegen.h  Lexer.cpp  Parser.h  Token.cpp  Token.h  argument_parser.c  argument_parser.h  ast.drast  build_system.drast  builtins.drast  cli.drast  codegen.drast  diagnostics.drast  flow.drast  headers.drast  lexer.drast  main.c  main.cpp  main.drast  package.drast  parser.drast  parser.drast.bak  platform.drast  project_templates.drast  symbols.drast  test_file.drast  test_file2.drast  token.drast  transpiler.drast  xmake_backend.drast
tests/: StructTests.drast  TODO.md  asm_tests.drast  docatch.drast  enum_tests.drast  for_loop_tests.drast  goto_tests.drast  if_else_tests.drast  loops_test.drast  main.drast  main1.drast  main2.drast  main2.drastt  modifiers.drast  run.py  run_tests.sh  struct_tests.drast  switch_tests.drast  template_tests.drast  typealias_tests.drast  variable_tests.drast
(+369 files in other folders)
